; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_en_netdev.c_mlx4_en_vlan_rx_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_en_netdev.c_mlx4_en_vlan_rx_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.vlan_group = type { i32 }
%struct.mlx4_en_priv = type { i32, i64, %struct.vlan_group*, %struct.mlx4_en_dev* }
%struct.mlx4_en_dev = type { i32, i32, i64 }

@HW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Registering VLAN group:%p\0A\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"Failed configuring VLAN filter\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.vlan_group*)* @mlx4_en_vlan_rx_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlx4_en_vlan_rx_register(%struct.net_device* %0, %struct.vlan_group* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.vlan_group*, align 8
  %5 = alloca %struct.mlx4_en_priv*, align 8
  %6 = alloca %struct.mlx4_en_dev*, align 8
  %7 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.vlan_group* %1, %struct.vlan_group** %4, align 8
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = call %struct.mlx4_en_priv* @netdev_priv(%struct.net_device* %8)
  store %struct.mlx4_en_priv* %9, %struct.mlx4_en_priv** %5, align 8
  %10 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %11 = getelementptr inbounds %struct.mlx4_en_priv, %struct.mlx4_en_priv* %10, i32 0, i32 3
  %12 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %11, align 8
  store %struct.mlx4_en_dev* %12, %struct.mlx4_en_dev** %6, align 8
  %13 = load i32, i32* @HW, align 4
  %14 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %15 = load %struct.vlan_group*, %struct.vlan_group** %4, align 8
  %16 = call i32 @en_dbg(i32 %13, %struct.mlx4_en_priv* %14, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), %struct.vlan_group* %15)
  %17 = load %struct.vlan_group*, %struct.vlan_group** %4, align 8
  %18 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %19 = getelementptr inbounds %struct.mlx4_en_priv, %struct.mlx4_en_priv* %18, i32 0, i32 2
  store %struct.vlan_group* %17, %struct.vlan_group** %19, align 8
  %20 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %6, align 8
  %21 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %20, i32 0, i32 0
  %22 = call i32 @mutex_lock(i32* %21)
  %23 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %6, align 8
  %24 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %47

27:                                               ; preds = %2
  %28 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %29 = getelementptr inbounds %struct.mlx4_en_priv, %struct.mlx4_en_priv* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %47

32:                                               ; preds = %27
  %33 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %6, align 8
  %34 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %37 = getelementptr inbounds %struct.mlx4_en_priv, %struct.mlx4_en_priv* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.vlan_group*, %struct.vlan_group** %4, align 8
  %40 = call i32 @mlx4_SET_VLAN_FLTR(i32 %35, i32 %38, %struct.vlan_group* %39)
  store i32 %40, i32* %7, align 4
  %41 = load i32, i32* %7, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %46

43:                                               ; preds = %32
  %44 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %5, align 8
  %45 = call i32 @en_err(%struct.mlx4_en_priv* %44, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %46

46:                                               ; preds = %43, %32
  br label %47

47:                                               ; preds = %46, %27, %2
  %48 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %6, align 8
  %49 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %48, i32 0, i32 0
  %50 = call i32 @mutex_unlock(i32* %49)
  ret void
}

declare dso_local %struct.mlx4_en_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @en_dbg(i32, %struct.mlx4_en_priv*, i8*, %struct.vlan_group*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mlx4_SET_VLAN_FLTR(i32, i32, %struct.vlan_group*) #1

declare dso_local i32 @en_err(%struct.mlx4_en_priv*, i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
